# http-legacy

./: CMakeLists.txt  CONTROL  license.txt  readme.md
include/http/: chrono.hpp  mime.hpp  parser.hpp  request.hpp  response.hpp  server.hpp  types.hpp
include/http/detail/: parse.hpp  parse.hpp.re  string.hpp
include/zlib/: crc.hpp  stream.hpp
res/: config.cmake.in
res/msvc/sys/: mman.h
src/: chrono.cpp  http_parser.c  mime.cpp  server.cpp  types.cpp
